--- a/src/assets/scss/custom-style/_buttons.scss
+++ b/src/assets/scss/custom-style/_buttons.scss
@@ -1,8 +1,3 @@
-// --------------------------------
-
-// (START) Global editor code https://codyhouse.co/ds/globals/buttons
-
-// --------------------------------
 
 :root {
   --btn-font-size: 1em;
@@ -17,7 +12,7 @@
   line-height: 1.2;
   @include fontSmooth;
   box-shadow: var(--shadow-xs);
-  transition: all 0.2s ease;
+  transition: all s ease;
   will-change: transform;
 
   &:hover {
@@ -37,7 +32,7 @@
 // themes
 .btn--primary {
   background: var(--color-primary);
-  color: var(--color-white);
+  color: var(--color-accent-darker);
 
   &:hover {
     background: var(--color-primary-dark);
@@ -85,8 +80,3 @@
   font-size: 1.4em;
 }
 
-// --------------------------------
-
-// (END) Global editor code
-
-// --------------------------------
