--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -16,7 +16,8 @@
 @import 'components/1_feature-v7';
 @import 'components/1_video-feature';
 @import 'components/1_feature-v9';
-
+@import 'components/1_accordion';
+@import 'components/2_accordion-v2';
 
 
 // .articles {
@@ -166,4 +167,85 @@
       font-size: var(--text-md) !important;
     }
   }
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: ease opacity 0.3s;
+}
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+
+
+// ARticle 
+
+.t-article-v3__hero {
+  background-color: var(--color-contrast-lower);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: var(--space-xxl) 0;
+  clip-path: polygon(0% 0%, 100% 0%, 100% calc(100% - 2em), 0% 100%);
+}
+
+.t-article-v3__intro-text {
+  padding: var(--space-md);
+  color: var(--color-bg);
+  background-color: alpha(var(--color-contrast-higher), 0.75);
+  backdrop-filter: blur(10px);
+  border-radius: var(--radius-lg);
+  @include fontSmooth;
+
+  p {
+    opacity: 0.75;
+  }
+}
+
+.t-article-v3__divider {
+  display: flex;
+  align-items: center;
+
+  span {
+    display: block;
+    margin: 0 var(--space-xs);
+    height: 10px;
+    width: 10px;
+    transform: rotate(45deg);
+    background-color: var(--color-contrast-low);
+  }
+
+  &::before, &::after {
+    content: '';
+    display: block;
+    height: 1px;
+    width: auto;
+    flex-grow: 1;
+    background-color: var(--color-contrast-lower);
+  }
+}
+
+// feature v5
+
+.feature-v5 {
+  --feature-media-offset: var(--space-xxl); // image offset
+  --feature-content-media-gap: var(--space-lg); // space between text and image
+}
+
+.feature-v5__content {
+  background-color: #C3FCF2;
+  padding-bottom: calc(var(--feature-content-media-gap) + var(--feature-media-offset));
+}
+
+.feature-v5__media {
+  margin-top: calc(-1 * var(--feature-media-offset));
+}
+
+#background {
+  background-color:#C3FCF2;
+}
+
+.sekcija {
+  margin-bottom: 500px;
 }
