--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -24,6 +24,10 @@
 @import 'components/1_scrolling-animations';
 @import 'components/2_diagonal-animated-divider';
 @import 'components/card-product.scss';
+@import 'components/1_vertical-timeline';
+@import 'components/1_rating.scss';
+@import 'components/2_product-card-v2.scss';
+@import 'components/3_products-gallery-v2.scss';
 
 
 // .articles {
