--- a/src/assets/scss/custom-style/_typography.scss
+++ b/src/assets/scss/custom-style/_typography.scss
@@ -1,17 +1,17 @@
-
+@import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:wght@700&display=swap');
 
 :root {
   // font family
-  --font-primary: sans-serif;
+  --font-primary: 'STIX Two Text', serif;
 
   // font size
   --text-base-size: 1em; // body font-size
   --text-scale-ratio: 1.2; // multiplier used to generate the type scale values 👇
-  
+
   // line-height
-  --body-line-height: 1.4;
+  --body-line-height: 1.5;
   --heading-line-height: 1.2;
-  
+
   // capital letters - used in combo with the lhCrop mixin
   --font-primary-capital-letter: 1;
 
@@ -31,7 +31,7 @@
   --text-xxxxl: calc(var(--text-xxxl) * var(--text-scale-ratio));
 }
 
-@supports(--css: variables) {
+@supports (--css: variables) {
   @include breakpoint(md) {
     :root {
       --text-base-size: 1.25em;
@@ -41,7 +41,7 @@
 }
 
 body {
-  font-family: var(--font-primary);
+  font-family: sans-serif;
 }
 
 h1, h2, h3, h4 {
@@ -50,17 +50,47 @@ h1, h2, h3, h4 {
 }
 
 // font family
-.font-primary { font-family: var(--font-primary); }
+.font-primary {
+  font-family: var(--font-primary);
+}
 
 // color
-.color-secondary-darker { color: alpha(var(--color-secondary-darker), var(--color-o, 1)); }
-.color-secondary-dark { color: alpha(var(--color-secondary-dark), var(--color-o, 1)); }
-.color-secondary { color: alpha(var(--color-secondary), var(--color-o, 1)); }
-.color-secondary-light { color: alpha(var(--color-secondary-light), var(--color-o, 1)); }
-.color-secondary-lighter { color: alpha(var(--color-secondary-lighter), var(--color-o, 1)); }
-.color-tertiary-darker { color: alpha(var(--color-tertiary-darker), var(--color-o, 1)); }
-.color-tertiary-dark { color: alpha(var(--color-tertiary-dark), var(--color-o, 1)); }
-.color-tertiary { color: alpha(var(--color-tertiary), var(--color-o, 1)); }
-.color-tertiary-light { color: alpha(var(--color-tertiary-light), var(--color-o, 1)); }
-.color-tertiary-lighter { color: alpha(var(--color-tertiary-lighter), var(--color-o, 1)); }
+.color-secondary-darker {
+  color: alpha(var(--color-secondary-darker), var(--color-o, 1));
+}
 
+.color-secondary-dark {
+  color: alpha(var(--color-secondary-dark), var(--color-o, 1));
+}
+
+.color-secondary {
+  color: alpha(var(--color-secondary), var(--color-o, 1));
+}
+
+.color-secondary-light {
+  color: alpha(var(--color-secondary-light), var(--color-o, 1));
+}
+
+.color-secondary-lighter {
+  color: alpha(var(--color-secondary-lighter), var(--color-o, 1));
+}
+
+.color-tertiary-darker {
+  color: alpha(var(--color-tertiary-darker), var(--color-o, 1));
+}
+
+.color-tertiary-dark {
+  color: alpha(var(--color-tertiary-dark), var(--color-o, 1));
+}
+
+.color-tertiary {
+  color: alpha(var(--color-tertiary), var(--color-o, 1));
+}
+
+.color-tertiary-light {
+  color: alpha(var(--color-tertiary-light), var(--color-o, 1));
+}
+
+.color-tertiary-lighter {
+  color: alpha(var(--color-tertiary-lighter), var(--color-o, 1));
+}
