--- a/src/assets/scss/custom-style/_buttons.scss
+++ b/src/assets/scss/custom-style/_buttons.scss
@@ -1,14 +1,17 @@
 :root {
-  --btn-font-size: 1em;
-  --btn-padding-x: var(--space-sm);
-  --btn-padding-y: var(--space-xxs);
+  --btn-font-size: 16px;
+  --btn-padding-x: var(--space-md);
+  --btn-padding-y: var(--space-xs);
   --btn-radius: 0.25em;
 }
 
 .btn {
   cursor: pointer;
+  font-family: var(--font-secondary);
+  font-weight: 400;
   text-decoration: none;
   line-height: 1.2;
+  letter-spacing: 0.32px;
   @include fontSmooth;
   box-shadow: var(--shadow-xs);
   transition: all 0.2s ease;
