--- a/src/assets/scss/components/_2_flexi-header.scss
+++ b/src/assets/scss/components/_2_flexi-header.scss
@@ -1,4 +1,4 @@
-/* -------------------------------- 
+/* --------------------------------
 
 File#: _2_flexi-header
 Title: Flexi Header
@@ -110,6 +110,7 @@ Usage: codyhouse.co/license
   color: var(--color-contrast-high);
   text-decoration: none;
   padding: var(--space-xs) 0;
+
 
   &:hover,
   &[aria-current="page"] {
@@ -246,7 +247,7 @@ html:not(.js) {
   .f-header {
     height: auto;
   }
-  
+
   .f-header__nav-control {
     display: none;
   }
@@ -258,5 +259,13 @@ html:not(.js) {
     visibility: visible;
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+.f-header__dropdown-link {
+  font-size: 16px;
+
+  @include breakpoint(md) {
+    font-size: 1rem;
   }
 }
