--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -291,11 +291,11 @@ body {
   height: 680px;
 }
 
-.proba {
+.flex-position {
   flex-shrink: 0;
 }
 
-.proba2 {
+.flex-position-border {
   flex: 1 1 0%;
   border-top: 2px solid silver;
 }
