--- a/src/assets/scss/components/_2_accordion-v2.scss
+++ b/src/assets/scss/components/_2_accordion-v2.scss
@@ -13,18 +13,20 @@ Usage: codyhouse.co/license
   --accordion-v2-icon-stroke-width: 1.5px;
 }
 
-.accordion-v2 {}
+.accordion-v2 {
+}
 
 .accordion-v2__item {
-  box-shadow: var(--shadow-sm);
-  transition: .3s;
+  box-shadow: var(--shadow-xs);
+  transition: 0.3s;
 
   &:hover {
     box-shadow: var(--shadow-md);
   }
 }
 
-.accordion-v2__header { // button
+.accordion-v2__header {
+  // button
   width: 100%;
   display: flex;
   align-items: center;
@@ -63,10 +65,12 @@ Usage: codyhouse.co/license
 }
 
 .accordion-v2__item--is-open > .accordion-v2__header {
-  > .accordion-v2__icon-arrow .icon__group { // animated arrow icon
+  > .accordion-v2__icon-arrow .icon__group {
+    // animated arrow icon
     transform: rotate(-90deg);
 
-    > *:first-child, *:last-child {
+    > *:first-child,
+    *:last-child {
       stroke-dashoffset: 0;
       transform: translateY(0px);
     }
@@ -88,15 +92,15 @@ Usage: codyhouse.co/license
 // animations
 .accordion-v2[data-animation="on"] {
   .accordion-v2__item--is-open .accordion-v2__panel > * {
-    animation: accordion-v2-entry-animation .4s var(--ease-out);
+    animation: accordion-v2-entry-animation 0.4s var(--ease-out);
   }
 
   .accordion-v2__icon-arrow {
     .icon__group {
-      transition: transform .3s var(--ease-out);
+      transition: transform 0.3s var(--ease-out);
 
       > * {
-        transition: transform .3s, stroke-dashoffset .3s;
+        transition: transform 0.3s, stroke-dashoffset 0.3s;
         transition-timing-function: var(--ease-out);
       }
     }
